# simple-backup-tool

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: DEBUG_TRUSTED_PUBLISHERS.md  RELEASE_SETUP.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
tests/: __init__.py  test_main.py
